add some endpoint to auth
